adding Lives of the Animals link and adding Bayu artist info

--- a/stories.html
+++ b/stories.html
@@ -42,8 +42,9 @@
 							<header class="align-center">
 								<h2>Writings</h2>
                                 <img src="images/kindred_spirits_crop.jpg" width="50%">
-                                <h2 />
+                                <p>Sculpture credit: "Kindred Spirits" by <a href="https://www.instagram.com/bayutopia/">Bayu Angermeyer</a></p>
 							</header>
+							<p />
                             <h4>About the Work</h4>
                                 <p>
                                     While essays, lectures, and arguments about sensitive topics tend 
@@ -56,7 +57,8 @@
 							<h4>Stories</h4>
 							<p> 
 								<ul style="margin-left: 5%">
-								<li><a href="stories/patterns.html">Patterns</a> - a mother's heartwarming support of her trans daughter (password available on request).</li>
+								<li><a href="stories/thelivesoftheanimals.html">The Lives of the Animals</a> - a story about navigating our needs for physical affection, selected for inclusion in the <a href="https://www.seaf.art">2025 Seattle Erotic Arts Festival<a></li>
+								<li><a href="stories/patterns.html">Patterns</a> - a loving mother's relentless support for her trans daughter (password available on request).</li>
 								<li><a href="stories/whatif.html">What If</a> - a story about the unexpected benefits of anxiety, from the <a href="https://open-books-a-poem-emporium.myshopify.com/products/long-priscilla-cur-jack-straw-writers-anthology-2023">
 										Jack Straw Writers Anthology 2023</a>.</li>
 								<li><a href="stories/petrichor.html">Petrichor*</a> - imagining the dynamics of attraction when it is based primarily on scent (password available on request).</li>
