--- a/stories/eshkolit.html
+++ b/stories/eshkolit.html
@@ -50,7 +50,16 @@
             
             <!-- Add a button to close the dialog box -->
             <p></p>
-            <button style="margin: 10" onclick="closePasswordDialog(98)">Enter</button>
+            <button style="margin: 10" onclick="closePasswordDialog()">Enter</button>
+            <div id="hashcode" style="visibility:hidden">98</div>
+            <script>                        
+                // add a listener for the return key on the password dialog 
+                document.getElementById("storyPassword").addEventListener("keydown", function(event) {
+                    if (event.key === "Enter") {
+                        closePasswordDialog();
+                    }
+                });
+            </script>
         </div>
         
 
